add url web server

--- a/src/integTest/resources/test.properties
+++ b/src/integTest/resources/test.properties
@@ -6,3 +6,5 @@ spring.datasource.url=jdbc:derby:memory:dsnbweb;create=true
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.data=@data-includes.txt
+
+web.server.url= 'http://192.168.0.1:6011/banana'
