--- a/src/integTest/resources/test.properties
+++ b/src/integTest/resources/test.properties
@@ -7,4 +7,4 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.data=@data-includes.txt
 
-web.server.url= 'http://192.168.0.1:6011/banana'
+web.server.url= http://192.168.0.1:6011/banana
